# mcp_agent

./: .gitignore  README.md  main.py  pyproject.toml  servers_config.json
app/: __init__.py  __main__.py
app/chat/: __init__.py  session.py
app/config/: __init__.py  config.py
app/llm/: __init__.py  client.py
app/server/: __init__.py  server.py
app/tools/: __init__.py  tool.py
