[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "MCP chatbot that integrates with Model Context Protocol servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11.5",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "mcp>=0.1.1",
    "openai>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
